# asio-forwarder

./: .gitignore  CMakeLists.txt  README.md
configs/dev/: forwarder.json  forwarder_web.json
deliver/: README.md
deliver/client/include/fwd/: asio_forwarder_client.hpp  config.hpp  forwarder_client.hpp  frame_io.hpp  log.hpp  protocol.hpp  relay_client.hpp  relay_constants.hpp  sha256.hpp
deliver/client/src/: forwarder_sdk.cpp
deliver/docs/: architecture.md  client_api.md  data_flow.md  delivery.md  design.md  history.md  local.md  performance.md  protocol.md  testing.md  usage.md
deliver/server/: forwarder.json  protocol.md  schema.sql
deliver/server/include/: mysql_store.hpp
deliver/server/src/: main.cpp
docs/: architecture.md  client_api.md  data_flow.md  delivery.md  design.md  history.md  protobuf.md  protocol.md  testing.md
examples/asio_forwarder_client_smoke/: smoke.cpp
examples/realistic_scenario/: README.md  dispatcher.py  worker.py
examples/realistic_scenario_cpp/: README.md  dispatcher.cpp  messages.hpp  poly_messages.hpp  worker.cpp
include/fwd/: config.hpp  endian.hpp  frame_io.hpp  log.hpp  protocol.hpp  relay_client.hpp  relay_constants.hpp  session_policy.hpp
local/: README.md
local/examples/: usage_instruction.cpp
local/examples/first_use/: first_use_client.cpp
local/examples/realistic_scenario/: README.md  admin.py
local/examples/realistic_scenario_cpp/: README.md  admin.cpp  dispatcher.cpp
local/tests/: cpp_smoke.cpp  e2e_forwarder.py  e2e_minimal.py  e2e_suite.py  perf_basic.cpp  run_e2e.sh  seed_e2e.sql  test_admin.cpp  test_user.cpp
local/tools/: forwarder_wire.py  relay_cli.py  relay_client.py  requirements-webui.txt  run_scenario.py  webui_server.py
local/tools/webui_static/: app.html
proto/: market.proto
scripts/: build.sh  gen_proto_python.sh  run_dev.sh  run_web.sh  test_e2e.sh
src/: asio_forwarder_client.cpp  main.cpp  proto_recv.cpp  proto_send.cpp  relay_client.cpp
tmp/: payload.txt
tools/: downstream_recv.py  relay_cli.py  relay_client.py  relay_e2e_runner.py  relay_proto.py  relay_test_suite.py  requirements-proto.txt  run_scenario.py  upstream_send.py  upstream_send_proto.py  webui_server.py
tools/webui_static/: index.html
web/: package-lock.json  package.json  server.js
web/public/: app.css  common.js  downstream.html  downstream_conn.html  index.html  upstream.html
